# aoc

2023/2/: main.hs
2023/day_1/: main.hs
2024/day_1/: main.hs
2024/day_2/: main.hs
2024/day_3/: day3.cabal
2024/day_3/src/: Main.hs
2024/day_3_rs/: Cargo.toml
2024/day_4/: day4.cabal
2024/day_4/src/: Main.hs
2025/day_1/: main.hs
2025/day_2/: main.hs
2025/day_3/: main.hs
2025/day_4/: main.hs
2025/day_5/: main.hs
2025/day_6/: main.hs
