cabal-version:       3.14
name:                day3
version:             0.1.0.0
build-type:          Simple
license:             MIT

executable day3
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:
    base >=4.7 && <5,
    text,
    attoparsec,
    mtl
  default-language:  Haskell2010
