cabal-version:   3.14
name:            day4
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day4
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, containers == 0.7, mtl, transformers == 0.6.1.2
    hs-source-dirs:   src
    default-language: Haskell2010
